docs/2.2/api/alltypes/index.md


### All Types

|

##### [com.rakuten.tech.mobile.miniapp.navigator.ExternalResultHandler](../com.rakuten.tech.mobile.miniapp.navigator/-external-result-handler/index.md)

The url transmitter from external factors to mini app view.


|

##### [com.rakuten.tech.mobile.miniapp.MiniApp](../com.rakuten.tech.mobile.miniapp/-mini-app/index.md)

This represents the contract between the consuming application and the SDK
by which operations in the mini app ecosystem are exposed.
Should be accessed via [MiniApp.instance](../com.rakuten.tech.mobile.miniapp/-mini-app/instance.md).


|

##### [com.rakuten.tech.mobile.miniapp.permission.MiniAppCustomPermission](../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission/index.md)

A data class to hold the custom permission with grant results using Pair per MiniApp.


|

##### [com.rakuten.tech.mobile.miniapp.permission.MiniAppCustomPermissionResponse](../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-response/index.md)

A data class to prepare the json response of custom permissions to be sent from this SDK.


|

##### [com.rakuten.tech.mobile.miniapp.permission.MiniAppCustomPermissionResult](../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-result/index.md)

Type of miniapp custom permission result.


|

##### [com.rakuten.tech.mobile.miniapp.permission.MiniAppCustomPermissionType](../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-type/index.md)

Type of miniapp custom permission.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppDisplay](../com.rakuten.tech.mobile.miniapp/-mini-app-display/index.md)

This represents the contract by which the host app can interact with the
display unit of the mini app.
This contract complies to Android's [LifecycleObserver](#) contract, and when made to observe
the lifecycle, it automatically clears up the view state and any services registered with.


|

##### [com.rakuten.tech.mobile.miniapp.navigator.MiniAppExternalUrlLoader](../com.rakuten.tech.mobile.miniapp.navigator/-mini-app-external-url-loader/index.md)

This support the scenario that external loader redirect to url which is only supported in mini app view,
close the external loader and emit that url to mini app view by [ExternalResultHandler.emitResult](../com.rakuten.tech.mobile.miniapp.navigator/-external-result-handler/emit-result.md).


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppInfo](../com.rakuten.tech.mobile.miniapp/-mini-app-info/index.md)

This represents a Mini App entity.


|

##### [com.rakuten.tech.mobile.miniapp.js.MiniAppMessageBridge](../com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md)

Bridge interface for communicating with mini app.


|

##### [com.rakuten.tech.mobile.miniapp.navigator.MiniAppNavigator](../com.rakuten.tech.mobile.miniapp.navigator/-mini-app-navigator/index.md)

The navigation controller of sdk mini app view.


|

##### [com.rakuten.tech.mobile.miniapp.permission.MiniAppPermissionType](../com.rakuten.tech.mobile.miniapp.permission/-mini-app-permission-type/index.md)

Type of miniapp permission.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppSdkConfig](../com.rakuten.tech.mobile.miniapp/-mini-app-sdk-config/index.md)

This represents the configuration settings for the Mini App SDK.


|

##### [com.rakuten.tech.mobile.miniapp.MiniAppSdkException](../com.rakuten.tech.mobile.miniapp/-mini-app-sdk-exception/index.md)

A custom exception class which treats the purpose of providing
error information to the consumer app in an unified way.


|

##### [com.rakuten.tech.mobile.miniapp.Version](../com.rakuten.tech.mobile.miniapp/-version/index.md)

This represents a version entity of a Mini App.


